--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "glebcolei",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "format": "prettier --write \"**/*.{js,jsx}\"",
-    "lint": "set NODE_ENV=production&& eslint \"**/*.{js,jsx}\" --fix",
-    "prepare": "husky",
-    "slicemachine": "start-slicemachine"
-  },
-  "dependencies": {
-    "@prismicio/client": "^7.21.0",
-    "@prismicio/next": "^2.0.2",
-    "@prismicio/react": "^3.2.2",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
-  },
-  "devDependencies": {
-    "@slicemachine/adapter-next": "^0.3.86",
-    "@tailwindcss/postcss": "^4",
-    "@types/react": "19.2.2",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-perfectionist": "^4.15.1",
-    "eslint-plugin-prettier": "^5.5.4",
-    "husky": "^9.1.7",
-    "pinst": "^3.0.0",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.7.1",
-    "slice-machine-ui": "^2.19.1",
-    "tailwindcss": "^4",
-    "typescript": "5.9.3"
-  }
+   "name": "glebcolei",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "format": "prettier --write \"**/*.{js,jsx}\"",
+      "lint": "set NODE_ENV=production&& eslint \"**/*.{js,jsx}\" --fix --max-warnings=0",
+      "prepare": "husky",
+      "slicemachine": "start-slicemachine"
+   },
+   "dependencies": {
+      "@prismicio/client": "^7.21.0",
+      "@prismicio/next": "^2.0.2",
+      "@prismicio/react": "^3.2.2",
+      "next": "16.0.1",
+      "react": "19.2.0",
+      "react-dom": "19.2.0"
+   },
+   "devDependencies": {
+      "@slicemachine/adapter-next": "^0.3.86",
+      "@tailwindcss/postcss": "^4",
+      "@types/react": "19.2.2",
+      "eslint": "^9",
+      "eslint-config-next": "16.0.1",
+      "eslint-config-prettier": "^10.1.8",
+      "eslint-plugin-perfectionist": "^4.15.1",
+      "eslint-plugin-prettier": "^5.5.4",
+      "husky": "^9.1.7",
+      "pinst": "^3.0.0",
+      "prettier": "^3.6.2",
+      "prettier-plugin-tailwindcss": "^0.7.1",
+      "slice-machine-ui": "^2.19.1",
+      "tailwindcss": "^4",
+      "typescript": "5.9.3"
+   }
 }
