--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "scripts": {
       "dev": "next dev",
       "build": "next build",
+      "postbuild": "next-sitemap",
       "start": "next start",
       "format": "prettier --write \"**/*.{js,jsx}\"",
       "lint": "set NODE_ENV=production&& eslint \"**/*.{js,jsx}\" --fix --max-warnings=0",
