--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "@prismicio/client": "^7.21.0",
       "@prismicio/next": "^2.0.2",
       "@prismicio/react": "^3.2.2",
+      "@vercel/analytics": "^1.5.0",
       "next": "16.0.1",
       "react": "19.2.0",
       "react-dom": "19.2.0"
