--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "@prismicio/next": "^2.0.2",
       "@prismicio/react": "^3.2.2",
       "@vercel/analytics": "^1.5.0",
-      "next": "16.0.1",
+      "next": "^16.0.7",
       "react": "19.2.0",
       "react-dom": "19.2.0"
    },
