--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
       "dev": "next dev",
       "build": "next build",
       "start": "next start",
-      "format": "prettier --write \"**/*.{js,jsx}\"",
-      "lint": "set NODE_ENV=production&& eslint \"**/*.{js,jsx}\" --fix --max-warnings=0",
+      "format": "prettier --write \"**/*.{ts,tsx,js,jsx}\"",
+      "lint": "set NODE_ENV=production&& eslint \"**/*.{ts,tsx,js,jsx}\" --fix --max-warnings=0",
       "prepare": "husky",
       "slicemachine": "start-slicemachine"
    },
@@ -21,9 +21,11 @@
       "react-dom": "19.2.1"
    },
    "devDependencies": {
+      "@prismicio/types": "^0.2.9",
       "@slicemachine/adapter-next": "^0.3.87",
       "@tailwindcss/postcss": "^4",
       "@types/react": "19.2.2",
+      "@types/react-dom": "^19.2.3",
       "eslint": "^9",
       "eslint-config-next": "16.0.1",
       "eslint-config-prettier": "^10.1.8",
@@ -35,6 +37,7 @@
       "prettier-plugin-tailwindcss": "^0.7.1",
       "slice-machine-ui": "^2.20.0",
       "tailwindcss": "^4",
-      "typescript": "5.9.3"
+      "typescript": "^5",
+      "typescript-eslint": "^8.12.2"
    }
 }
